--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,1 +1,30 @@
-<!-- add some routing buttons -->
+<nav class="navbar navbar-expand-lg navbar-dark bg-primary">
+  <div class="container-fluid">
+    <a class="navbar-brand" routerLink="/">Project Name</a>
+    <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav"
+      aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
+      <span class="navbar-toggler-icon"></span>
+    </button>
+    <div class="collapse navbar-collapse" id="navbarNav">
+      <ul class="navbar-nav">
+        <li class="nav-item">
+          <a class="nav-link" routerLink="/link1">Name 1</a>
+        </li>
+        <li class="nav-item">
+          <a class="nav-link" routerLink="/link2">Name 2</a>
+        </li>
+        <li class="nav-item">
+          <a class="nav-link" routerLink="/link3">Name 3</a>
+        </li>
+        <li class="nav-item">
+          <a class="nav-link" routerLink="/link4">Name 4</a>
+        </li>
+        <li class="nav-item">
+          <a class="nav-link" routerLink="/link5">Name 5</a>
+        </li>
+      </ul>
+    </div>
+  </div>
+</nav>
+
+<router-outlet></router-outlet>
