--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,6 +1,6 @@
 <nav class="navbar navbar-expand-lg navbar-dark bg-primary">
   <div class="container-fluid">
-    <a class="navbar-brand" routerLink="/">Project Name</a>
+    <a class="navbar-brand" routerLink="/">Group Project</a>
     <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav"
       aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
       <span class="navbar-toggler-icon"></span>
@@ -8,19 +8,19 @@
     <div class="collapse navbar-collapse" id="navbarNav">
       <ul class="navbar-nav">
         <li class="nav-item">
-          <a class="nav-link" routerLink="/link1">Name 1</a>
+          <a class="nav-link" routerLink="/homepage">HOME</a>
         </li>
         <li class="nav-item">
-          <a class="nav-link" routerLink="/link2">Name 2</a>
+          <a class="nav-link" routerLink="/aboutpage">ABOUT</a>
         </li>
         <li class="nav-item">
-          <a class="nav-link" routerLink="/link3">Name 3</a>
+          <a class="nav-link" routerLink="/servicepage">SERVICES</a>
         </li>
         <li class="nav-item">
-          <a class="nav-link" routerLink="/link4">Name 4</a>
+          <a class="nav-link" routerLink="/contactpage">CONTACT</a>
         </li>
         <li class="nav-item">
-          <a class="nav-link" routerLink="/link5">Name 5</a>
+          <a class="nav-link" routerLink="/blogpage">BLOG</a>
         </li>
       </ul>
     </div>
